# random-quote-generator

./: pyproject.toml
docs/: conf.py
